syntax = "proto3";

package meteroid.api.tenants.v1;

message TenantBillingConfiguration {
  message Stripe {
    string api_secret = 1;
    string webhook_secret = 2;
  }
  oneof billing_config_oneof {
    Stripe stripe = 1;
  }
}

message Tenant {
  string id = 1;
  string name = 2;
  string slug = 3;
  string reporting_currency = 4;
  TenantEnvironmentEnum environment = 5;
}

message TenantUpdate {
  optional string trade_name = 1;
  optional string name = 2;
  optional string slug = 3;
  optional string reporting_currency = 4;
  optional TenantEnvironmentEnum environment = 5;
}

enum TenantEnvironmentEnum {
  PRODUCTION = 0;
  STAGING = 1;
  QA = 2;
  DEVELOPMENT = 3;
  SANDBOX = 4;
  DEMO = 5;
}
